--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Index";
 }
 
+<partial name="_Notification"/>
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
@@ -26,25 +27,32 @@
                 Display Order
             </th>
             <th>
-                Edito
+                Edit
+            </th>
+            <th>
+                Delete
             </th>
         </tr>
     </thead>
     <tbody>
         @foreach (var obj in Model)
         {
-            <tr>
-                <td>
-                    @obj.Name
-                </td>
-                <td>
-                    @obj.DisplayOrder
-                </td>
-                <td>
-                    <div class="w-75 btn-group" role="group"></div>
-                        <a  asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary">Edit</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @obj.Name
+            </td>
+            <td>
+                @obj.DisplayOrder
+            </td>
+            <td>
+                <div class="w-75 btn-group" role="group"></div>
+                <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary">Edit</a>
+            </td>
+            <td>
+                <div class="w-75 btn-group" role="group"></div>
+                <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-primary">Delete</a>
+            </td>
+        </tr>
 
         }
     </tbody>
